<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".SongFragment">

    <TextView
        android:id="@+id/tv_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:text="@string/now_playing"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/dimen_35dp"
        android:layout_marginBottom="@dimen/dimen_50dp"
        android:text="@string/blue_neighbourhood"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_20sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/tv_song_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="@dimen/dimen_33dp"
        android:layout_marginBottom="@dimen/dimen_85dp"
        android:text="@string/talk_me_down"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_40sp"
        android:textStyle="italic" />

</FrameLayout>